# staffdemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bd/: staff.json
include/: Employee.h  Engineer.h  Factory.h  Interfaces.h  Personal.h  Project.h
src/: Employee.cpp  Engineer.cpp  Factory.cpp  Makefile  Personal.cpp  Project.cpp  main.cpp
